@@ -6,11 +6,11 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.6'
   id 'org.springframework.boot' version '3.3.3'
-  id 'org.owasp.dependencycheck' version '10.0.2'
+  id 'org.owasp.dependencycheck' version '10.0.4'
   id 'com.github.ben-manes.versions' version '0.48.0'
-  id 'org.sonarqube' version '3.5.0.2730'
+  id 'org.sonarqube' version '5.1.0.4882'
   id 'info.solidsoft.pitest' version '1.15.0'
-  id 'io.freefair.lombok' version '6.5.1'
+  id 'io.freefair.lombok' version '8.10'
   // If Pact version is changed, make sure serenity report works.
   id 'au.com.dius.pact' version '4.3.12'
   id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.3'
@@ -22,7 +22,7 @@ version = '0.0.1'
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
+    languageVersion = JavaLanguageVersion.of(21)
   }
 }
 
@@ -106,6 +106,7 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
   // finalizedBy aggregate
 }
 
@@ -156,7 +157,7 @@ jacocoTestReport {
   reports {
     xml.required = true
     csv.required = false
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
@@ -192,7 +193,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "Reform :: wa-task-management-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:wa-task-management-api"
-    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/config/**," +
@@ -282,9 +283,9 @@ repositories {
 }
 
 def versions = [
-  junit         : '5.11.0',
-  junitPlatform : '1.11.0',
-  reformLogging : '6.1.6',
+  junit         : '5.11.3',
+  junitPlatform : '1.11.3',
+  reformLogging : '6.1.7',
   springDoc     : '1.8.0',
   serenity      : '3.4.2',
   gradlePitest  : '1.15.0',
@@ -293,7 +294,7 @@ def versions = [
   pactVersion   : '4.3.4',
   logbook       : '3.9.0',
   tomcat        : '10.1.28',
-  testcontainers: '1.19.8',
+  testcontainers: '1.20.3',
   mapStruct     : '1.3.0.Final',
   logbook      : '3.9.0'
 ]
@@ -452,6 +453,7 @@ task runAndPublishConsumerPactTests(type: Test) {
   logger.lifecycle("Runs pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 runAndPublishConsumerPactTests.finalizedBy pactPublish
@@ -473,12 +475,14 @@ task contract(type: Test) {
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 task runProviderPactVerification(type: Test) {
   logger.lifecycle("Runs provider pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
   if (project.hasProperty('pact.verifier.publishResults')) {
     systemProperty 'pact.verifier.publishResults', project.property('pact.verifier.publishResults')
   }
